Parallel dynamic algorithm (#59)
* dynamic parallel first working version

* revert to investigate performance regression

* parallel dynamic tuning

* default parallel to false for now

* dynamic parallel

* disable cache

* work around numba recursion error

* warnings

* fix warning

* rerun bench

--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -16,6 +16,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8d26b208-0147-4c53-ba9d-35c422297511",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from anjl._dynamic import dynamic_search_parallel, dynamic_update_parallel\n",
+    "# dynamic_search_parallel.parallel_diagnostics(level=4)\n",
+    "# dynamic_update_parallel.parallel_diagnostics(level=4)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2b2dde93-ab62-4b0a-81c2-385ef3ec1e39",
    "metadata": {},
@@ -25,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "eb436654-d847-4e79-85ad-64f83006994c",
    "metadata": {},
    "outputs": [
@@ -35,7 +47,7 @@
        "(181, 181)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "42ec4643-a6be-4b8d-8e4d-fb4d7c6140b9",
    "metadata": {},
    "outputs": [
@@ -56,18 +68,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.73 ms ± 145 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "2.02 ms ± 112 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r1000 -n1\n",
-    "anjl.dynamic_nj(small_dist)"
+    "anjl.dynamic_nj(small_dist, parallel=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "id": "cae6865a-9d56-40cc-9652-b5e9f4640308",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 4.73 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "4.53 ms ± 725 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r1000 -n1\n",
+    "anjl.dynamic_nj(small_dist, parallel=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "915b0085-52d4-4126-ac48-59dfb7dc403e",
    "metadata": {},
    "outputs": [
@@ -75,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.35 ms ± 206 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.69 ms ± 208 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -86,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "76f10e01-4497-43d4-a47f-2a01ec5c011a",
    "metadata": {},
    "outputs": [
@@ -94,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.17 ms ± 154 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "3.51 ms ± 183 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -105,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "68884753-f4b9-484c-a82b-1ffce38d0400",
    "metadata": {},
    "outputs": [
@@ -113,8 +145,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 57.33 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "2.48 ms ± 4.01 ms per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "The slowest run took 5.19 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "2.29 ms ± 468 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -133,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -143,7 +175,7 @@
        "(472, 472)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "ebf1c642-1fa3-4047-a981-ddcd7afdf76c",
    "metadata": {},
    "outputs": [
@@ -164,18 +196,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.95 ms ± 1.21 ms per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
+      "9.12 ms ± 281 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r500 -n1\n",
-    "anjl.dynamic_nj(medium_dist)"
+    "anjl.dynamic_nj(medium_dist, parallel=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
+   "id": "864d85f8-3ad6-4a68-981e-2040474acac1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.3 ms ± 916 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r500 -n1\n",
+    "anjl.dynamic_nj(medium_dist, parallel=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "a7155702-0e81-4d54-a6b2-c68642e056f2",
    "metadata": {},
    "outputs": [
@@ -183,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35.4 ms ± 1.74 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "39.9 ms ± 1.06 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -194,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "316ec457-3799-4843-80df-491956229101",
    "metadata": {},
    "outputs": [
@@ -202,7 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25 ms ± 1.42 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "48 ms ± 2.75 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -213,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "6ab837d0-37ad-4d57-b063-4150851142c8",
    "metadata": {},
    "outputs": [
@@ -221,8 +272,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 11.82 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "14.1 ms ± 13.2 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "13.3 ms ± 2.77 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -241,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -251,7 +301,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "00997e17-82ec-4e34-be55-26631a80c738",
    "metadata": {},
    "outputs": [
@@ -272,7 +322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 344.43 MiB, increment: 18.03 MiB\n"
+      "peak memory: 338.93 MiB, increment: 17.98 MiB\n"
      ]
     }
    ],
@@ -283,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "782af7e8-8891-431b-be9e-835b442410c7",
    "metadata": {},
    "outputs": [
@@ -291,7 +341,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 344.34 MiB, increment: 17.80 MiB\n"
+      "peak memory: 338.83 MiB, increment: 17.80 MiB\n"
      ]
     }
    ],
@@ -302,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -310,18 +360,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "335 ms ± 15.1 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "415 ms ± 4.71 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit -r20 -n1\n",
-    "anjl.dynamic_nj(large_dist)"
+    "anjl.dynamic_nj(large_dist, parallel=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
+   "id": "2eef0126-79ad-4345-a995-19d4da0b6fc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "318 ms ± 5.15 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r20 -n1\n",
+    "anjl.dynamic_nj(large_dist, parallel=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "edbc408e-f210-4bd4-8762-e249c66c1dd0",
    "metadata": {},
    "outputs": [
@@ -329,7 +398,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.97 s ± 21.9 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "3.69 s ± 11.7 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -340,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
    "metadata": {},
    "outputs": [
@@ -348,7 +417,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.67 s ± 72.3 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "13.3 s ± 24 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -359,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "f91c379e-39c6-4356-8ebb-e314d1bbb9f5",
    "metadata": {},
    "outputs": [
@@ -367,7 +436,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.37 s ± 44.4 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "2.19 s ± 14.4 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -386,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -396,7 +465,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "6c65d726-92f9-4294-ac41-8d6f7b182572",
    "metadata": {},
    "outputs": [
@@ -417,7 +486,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 608.53 MiB, increment: 65.71 MiB\n"
+      "peak memory: 603.45 MiB, increment: 65.62 MiB\n"
      ]
     }
    ],
@@ -428,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "e2005194-6b68-48a4-94fe-20f5e75a7c53",
    "metadata": {},
    "outputs": [
@@ -436,7 +505,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 608.53 MiB, increment: 65.62 MiB\n"
+      "peak memory: 603.45 MiB, increment: 65.62 MiB\n"
      ]
     }
    ],
@@ -447,14 +516,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
+   "id": "94a7d01c-a7a5-40a1-80a9-f42eb0f27399",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.09 s ± 15.8 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r3 -n1\n",
+    "anjl.dynamic_nj(xl_dist, parallel=False);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b3efd051-1ec5-4035-b5ff-47d659daea28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.42 s ± 5.43 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r3 -n1\n",
+    "anjl.dynamic_nj(xl_dist, parallel=True);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d0a8249b7a745ef85c42956e8b9e8f6",
+       "model_id": "c59fce57ef854df3afa36ebfa91a3f29",
        "version_major": 2,
        "version_minor": 0
       },
@@ -469,8 +576,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.18 s, sys: 17 ms, total: 2.2 s\n",
-      "Wall time: 2.18 s\n"
+      "CPU times: user 11.1 s, sys: 43.9 ms, total: 11.1 s\n",
+      "Wall time: 1.49 s\n"
      ]
     }
    ],
@@ -481,14 +588,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "d03fdca2-2c6e-4389-ad3c-0bb84eb6ce16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b658fe0f17a440888577424cd91f646a",
+       "model_id": "6716133111c04eabb98417488d6a8d18",
        "version_major": 2,
        "version_minor": 0
       },
@@ -503,8 +610,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19.5 s, sys: 261 ms, total: 19.8 s\n",
-      "Wall time: 19.7 s\n"
+      "CPU times: user 22.2 s, sys: 260 ms, total: 22.5 s\n",
+      "Wall time: 22.3 s\n"
      ]
     }
    ],
@@ -515,14 +622,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "49b6da7b-1ee3-49e1-98ca-2706a5195b01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61d85a7b70b6416ba44c0386a808ab19",
+       "model_id": "749777ee62ad4777ac600c8b698ffabd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -537,8 +644,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 25s, sys: 136 ms, total: 1min 25s\n",
-      "Wall time: 1min 25s\n"
+      "CPU times: user 1min 40s, sys: 126 ms, total: 1min 40s\n",
+      "Wall time: 1min 40s\n"
      ]
     }
    ],
@@ -549,14 +656,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "b5959611-567d-4efc-a05a-1e2a8bed806f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c07537b7c354212b9ccf802f762cd1b",
+       "model_id": "19ec3447a9474f718c4d50147ea1229b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -571,8 +678,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 12s, sys: 237 ms, total: 3min 12s\n",
-      "Wall time: 25.1 s\n"
+      "CPU times: user 2min 46s, sys: 182 ms, total: 2min 46s\n",
+      "Wall time: 21 s\n"
      ]
     }
    ],
@@ -591,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -601,7 +708,7 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "e812009e-2642-4d93-a85b-a63f11828b5c",
    "metadata": {},
    "outputs": [
@@ -622,7 +729,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 1157.98 MiB, increment: 148.50 MiB\n"
+      "peak memory: 1152.92 MiB, increment: 148.50 MiB\n"
      ]
     }
    ],
@@ -633,14 +740,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
+   "id": "adc1fb87-4e27-45f3-99a5-a57db73a06b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6.83 s, sys: 19 ms, total: 6.85 s\n",
+      "Wall time: 6.85 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.dynamic_nj(xxl_dist, parallel=False);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9121e296-89cb-4c71-80c9-a7ec7bca5994",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 32.4 s, sys: 57 ms, total: 32.5 s\n",
+      "Wall time: 4.27 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.dynamic_nj(xxl_dist, parallel=True);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92ea5360473447ed880196af73f7b133",
+       "model_id": "bdfb6267b0b343ed88e8a73f05da357b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -655,26 +802,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.36 s, sys: 26 ms, total: 6.38 s\n",
-      "Wall time: 6.34 s\n"
+      "CPU times: user 36.3 s, sys: 93.8 ms, total: 36.4 s\n",
+      "Wall time: 4.86 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "anjl.dynamic_nj(xxl_dist, progress=tqdm);"
+    "anjl.dynamic_nj(xxl_dist, parallel=True, progress=tqdm);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "94f6d2f5-e61e-45c8-934f-66289798bce9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04834876092d459bb44783f575b7e283",
+       "model_id": "903b57d48bfc401298dce43294ef7928",
        "version_major": 2,
        "version_minor": 0
       },
@@ -689,8 +836,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 4s, sys: 638 ms, total: 1min 4s\n",
-      "Wall time: 1min 4s\n"
+      "CPU times: user 1min 18s, sys: 650 ms, total: 1min 19s\n",
+      "Wall time: 1min 19s\n"
      ]
     }
    ],
@@ -701,14 +848,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "id": "8c4a9a32-2922-460b-9df1-3baacbb7633f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f46779776cfc4f4694f4ef7aec1db24e",
+       "model_id": "c498c55347ca4bee92d6a9c12c012549",
        "version_major": 2,
        "version_minor": 0
       },
@@ -723,8 +870,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 12min 50s, sys: 861 ms, total: 12min 51s\n",
-      "Wall time: 1min 40s\n"
+      "CPU times: user 11min 40s, sys: 799 ms, total: 11min 41s\n",
+      "Wall time: 1min 29s\n"
      ]
     }
    ],
@@ -743,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "id": "d8b58001-517c-452e-9e54-68fd7da9eaad",
    "metadata": {},
    "outputs": [
